--- a/package.json
+++ b/package.json
@@ -2,18 +2,24 @@
   "name": "refranero-api",
   "version": "2.0.0",
   "description": "RESTful API for serving Spanish idioms",
-  "main": "src/api.js",
+  "main": "dist/api.js",
   "scripts": {
-    "serve": "nodemon src/api --harmony"
+    "watch": "tsc --watch",
+    "build": "tsc",
+    "serve": "nodemon dist/api --harmony"
   },
   "author": "Isaac Bejarano",
   "license": "MIT",
   "dependencies": {
     "@koa/router": "^10.1.1",
     "koa": "^2.13.3",
-    "koa-static": "^5.0.0"
+    "koa-static": "^5.0.0",
+    "netlify-lambda": "^2.0.14",
+    "serverless-http": "^2.7.0",
+    "webpack": "^5.56.0"
   },
   "devDependencies": {
+    "@types/koa": "^2.13.4",
     "chalk": "^4.1.2"
   }
 }
