--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,31 +2,26 @@
 	"compilerOptions": {
 		"target": "es6",
 		"module": "commonjs",
-		"rootDir": "./",
 		"outDir": "dist",
-		"strict": true,
+		"rootDirs": ["."],
+		"strict": false,
 		"moduleResolution": "node",
-		"baseUrl": "./",
 		"esModuleInterop": true,
 		"experimentalDecorators": true,
 		"skipLibCheck": true,
 		"forceConsistentCasingInFileNames": true,
+		"baseUrl": "./",
 		"paths": {
-			"*": ["node_modules/*"],
-			"@assets": ["src/assets/*"],
-			"@controllers": ["src/controllers/*"],
-			"@meta": ["src/middleware/meta/*"],
-			"@shared": ["src/middleware/shared/*"],
-			"@services": ["src/services/*"],
-			"@utils": ["src/utils/*"],
+			"*": ["node_modules/*"]
 		}
 	},
+	"include": ["src/**/*"],
 	"exclude": ["node_modules", "src/**/*.spec.ts"],
 	"watchOptions": {
 		"watchFile": "useFsEvents",
 		"watchDirectory": "useFsEvents",
 		"fallbackPolling": "dynamicPriority",
 		"synchronousWatchDirectory": true,
-		"excludeDirectories": ["node_modules"],
+		"excludeDirectories": ["node_modules"]
 	}
 }
