hotfix: use ES2105 syntax to import devDependencies + use CommonJs to require TS partials

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"license": "MIT",
 	"main": "dist/api.js",
 	"scripts": {
-		"dev": "ts-node src/api.ts",
+		"start": "ts-node src/api.ts",
 		"watch": "ts-node-dev --respawn src/api.ts",
 		"build": "tsc",
 		"serve": "node dist/api --harmony"
