--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"license": "MIT",
 	"main": "dist/api.js",
 	"scripts": {
-		"start": "ts-node src/api.ts",
+		"start": "ts-node-dev src/api.ts",
 		"watch": "ts-node-dev --respawn src/api.ts",
 		"build": "tsc",
 		"serve": "node dist/api --harmony"
@@ -22,6 +22,8 @@
 	},
 	"devDependencies": {
 		"@types/koa": "^2.13.4",
+		"@types/koa__router": "^8.0.8",
+		"@types/koa-static": "^4.0.2",
 		"chalk": "^4.1.2",
 		"ts-node-dev": "^1.1.8"
 	}
