--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
 		"strict": false,
 		"moduleResolution": "node",
 		"esModuleInterop": true,
+		"resolveJsonModule": true,
 		"experimentalDecorators": true,
 		"skipLibCheck": true,
 		"forceConsistentCasingInFileNames": true,
@@ -15,8 +16,8 @@
 			"*": ["node_modules/*"]
 		}
 	},
-	"include": ["src/**/*"],
-	"exclude": ["node_modules", "src/**/*.spec.ts"],
+	"include": ["src/**/*", "src/static/json/*.json"],
+	"exclude": ["node_modules", "src/**/*.spec.ts", "src/static/static.ts"],
 	"watchOptions": {
 		"watchFile": "useFsEvents",
 		"watchDirectory": "useFsEvents",
