hotfix: dotenv added

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,4 @@
 [build]
 	publish = "public"
 	functions = "lambda"
-	command = "npm install && npm run jam && npm run ntl:build"
+	# command = "npm install && npm run jam && npm run ntl:build" # use it only in CI/CD
