--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 	},
 	"dependencies": {
 		"@koa/router": "^10.1.1",
+		"dotenv": "^10.0.0",
 		"koa": "^2.13.3",
 		"koa-static": "^5.0.0",
 		"module-alias": "^2.2.2",
